<resources>
    <string name="app_name">Sensair</string>
    <string name="button_connect">Connect</string>
    <string name="button_register">Register</string>
    <string name="button_validate">Validate</string>
    <string name="text_view_authentification">Authentification</string>
    <string name="edit_text_login">Login</string>
    <string name="edit_text_username">Username</string>
    <string name="edit_text_password">Password</string>
    <string name="checkbox_password_save">Save Login/Password ?</string>
    <string name="enable">Enable</string>
    <string name="title_activity_maps">Map</string>
    <string name="uuid">UUID</string>
    <string name="displayName">Display Name</string>
    <string name="add_uuid">Add the uuid of the sensor</string>
    <string name="register_unvalid_email">Email is not a valid format</string>
    <string name="register_password_not_match">Invalid password</string>
    <string name="register_register">Inscrivez-vous</string>
    <string name="register_unvalid_name">Name is require</string>
</resources>
